--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
             ],
             "scripts": []
@@ -96,12 +97,26 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
               "src/styles.scss"
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "cs336-FinalApp1:build:production",
+            "firebaseProject": "cs336-finalproj1",
+            "firebaseHostingSite": "cs336-finalproj1"
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "be213d44-9ec5-4884-a7b8-557fc53d90d4"
   }
 }
